# so-av2

./: .gitignore  CMakeLists.txt  README.md
docs/: so-av1.tex
include/: arguments.h  library.h  pgm.h
src/: arguments.c  library.c  main.c  main_sender.c  main_worker.c  pgm.c
tests/: PGM_Generator  PGM_Generator.c
